syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp created_at = 2; 
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}


